# opengl-programs

./: .gitignore  README.md
setup-opengl/: Angel.h  CMakeLists.txt  main.cpp
test-opengl/: CMakeLists.txt  main.cpp
test-opengl-C/: CMakeLists.txt  bezier.h  bresenham.h  main.cpp
testing-bitwise/: CMakeLists.txt  main.c
